language/move-lang/tests/move_check/translated_ir_tests/move/signer/move_to_reference_to_resource.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/translated_ir_tests/move/signer/move_to_reference_to_resource.move:4:9
  │
3 │     fun t0(s: &signer, r: &R) {
  │                           -- Given: '&0x8675309::M::R'
4 │         move_to<R>(s, move r)
  │         ^^^^^^^^^^^^^^^^^^^^^
  │         │       │
  │         │       Expected: '0x8675309::M::R'
  │         Invalid call of 'move_to'. Invalid argument for parameter '1'

error[E04007]: incompatible types
   ┌─ tests/move_check/translated_ir_tests/move/signer/move_to_reference_to_resource.move:14:9
   │
13 │     fun t0(s: &signer, r: &mut R<bool>) {
   │                           ------------ Given: '&mut 0x8675309::N::R<bool>'
14 │         move_to<R<bool>>(s, move r)
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │       │
   │         │       Expected: '0x8675309::N::R<bool>'
   │         Invalid call of 'move_to'. Invalid argument for parameter '1'

